# AI-hot

./: .gitignore  CLAUDE.md  DEV_LOG.md  README.md  docker-compose.yml  tmp.md  核心竞争力.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  analysis_agent.py  context_agent.py  memory_agent.py  planner_agent.py  report_agent.py  research_agent.py
backend/app/api/: memories.py  reports.py  tasks.py  tools.py  workflows.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  node_execution_log.py  report.py  task.py  tool_execution_log.py  workflow_run.py
backend/app/mcp/: __init__.py
backend/app/mcp/adapters/: __init__.py  mcp_adapter.py
backend/app/mcp/clients/: __init__.py  base_client.py  stdio_client.py
backend/app/mcp/discovery/: __init__.py  discovery_service.py
backend/app/mcp/manager/: __init__.py  client_manager.py
backend/app/memory/: __init__.py  embedding_service.py  memory_service.py  qdrant_store.py
backend/app/repositories/: __init__.py  base_repo.py  node_execution_log_repo.py  report_repo.py  task_repo.py  tool_execution_log_repo.py  workflow_run_repo.py
backend/app/services/: __init__.py  base_service.py  exceptions.py  llm_service.py  report_service.py  task_service.py  workflow_service.py
backend/app/tools/: __init__.py
backend/config/mcp/: filesystem.yaml
backend/tests/: test_mcp.py  test_mcp_tool_call.py
backend/tests/tools/: test_arxiv_tool.py  test_github_tool.py  test_registry.py  test_tool_service.py
docs/: 01_状态模型设计.md  (+12 more)
(+120 files in other folders)
